--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <hr>
 <h2>Fill in all of the input boxes, then click the "Mad Lib" button.</h2>
 
-<li>Plural Noun <input></li>
-<p></p>
-<li>Adjective: <input></li>
-<p></p>
-<li>Present Tense Verb: <input></li>
-<p></p>
-<li>Noun: <input></li>
-<p><button>Mad Lib</button></p>
+<li>Plural Noun <input id="plural-noun" type="text"></li>
+<li>Adjective: <input id= "adjective" type="text"></li>
+<li>Present Tense Verb: <input id="verb" type="text"></li>
+<li>Noun: <input id="noun"type="text"></li>
+
+<p><button id="mad-lib-btn">Mad Lib</button></p>
 <hr>
+
 <h2>Mad Lib Results</h2>
-<p>"There are to many _____ on ____ this aireplane!", "Somebody has to ____ on 
-    the ____ to solve this problem"
-<p>
-</body>
+<p id="result"><p>
+
+
+    <script src="script.js"></script>
+    </body>
 </html>
